# pentabong

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gen.bat  vcpkg.json
framework/: CMakeLists.txt
framework/aoi/: CMakeLists.txt
framework/aoi/include/aoi/: aoi.h
framework/aoi/source/: CMakeLists.txt  aoi.cpp
framework/aoi/test/: CMakeLists.txt  test-case.cpp
framework/ari/: CMakeLists.txt
framework/ari/include/ari/: ari.h  buffer.h  network.h  session.h  sessionmanager.h  socket.h
framework/ari/source/: CMakeLists.txt  acceptor.cpp  acceptor.h  ari.cpp  ari.h  buffer.cpp  foo.ixx  network-tcp.cpp  network-tcp.h  network.cpp  network_tcp.cpp  network_tcp.h  session.cpp  sessionmanager.cpp  tcpsocket.cpp  tcpsocket.h
framework/ari/test/: CMakeLists.txt  buffer_test.cpp  hello_test.cpp  main.cpp
framework/bong/: CMakeLists.txt
framework/bong/source/: CMakeLists.txt  bong-module.ixx
proto/: CMakeLists.txt
proto/config/: ari.proto  pentabong.proto
proto/config_generated/: ari.pb.cc  ari.pb.h  pentabong.pb.cc  pentabong.pb.h
proto/datatable/: ari-data.proto
proto/datatable_generated/: ari-data.pb.cc  ari-data.pb.h
server/: CMakeLists.txt
server/senbong/include/senbong/: senbong.h
server/senbong/source/: CMakeLists.txt  senbong.cpp
source/: CMakeLists.txt  main.cpp  player.cpp  player.h
testclient/: CMakeLists.txt  main.cpp
